--- a/homework4/index.html
+++ b/homework4/index.html
@@ -26,24 +26,22 @@
                 <h2 class="artist">
                     Artist: Nirvana
                 </h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                <p class="target-class">
+                  I really liked how a dollar from the actual album cover was represented just by a green rectangle in the artwork. 
                 </p>
                 <ul>
                   <li><p>Release Date: September 24, 1991</p></li>
                   <li><p>Label: DGC Records</p></li>
-                  <li><p></p></li>
+                  <li><p>Nirvana's first release on a major label and the first to feature drummer Dave Grohl.</p></li>
                 </ul>
               </div>
-              <button id="click-me">Click</button>
-
             </div>
 
             <div class="artwork artwork-2">
                 <div class="artwork-cover2">
                   <img src="albumcover2.png">
                 </div>
-                <div class="artwork-info2">
+                <div id="box2" class="artwork-info2">
                   <h2 class="title2">
                       Beatbox
                   </h2>
@@ -51,18 +49,17 @@
                       Artist: NCT DREAM
                   </h2>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                    I liked the handwritten texts in the background and the colorful color schemes of the artists' outfits.
                   </p>
                   <ul>
                     <li><p>Release Date: May 30, 2022</p></li>
                     <li><p>Label: SM Entertainment</p></li>
-                    <li><p></p></li>
+                    <li><p>It is a hip hop, R&B and teen pop song featuring beatboxing samples with lyrics inspired by the themes typical of old-school and 90s hip hop.</p></li>
                   </ul>
                 </div>
-                <button id="click-me">Click</button>
-
               </div>
+
           </div>
-       
+          
     </body>
 </html>
