--- a/homework4/index.html
+++ b/homework4/index.html
@@ -15,7 +15,7 @@
     <body>
 
         <div class="artworks-container">
-            <div class="artwork artwork-1">
+            <div class="artwork">
               <div class="artwork-cover">
                 <img src="albumcover1.png">
               </div>
@@ -37,11 +37,11 @@
               </div>
             </div>
 
-            <div class="artwork artwork-2">
-                <div class="artwork-cover2">
+            <div class="artwork">
+                <div class="artwork-cover">
                   <img src="albumcover2.png">
                 </div>
-                <div id="box2" class="artwork-info2">
+                <div class="artwork-info">
                   <h2 class="title2">
                       Beatbox
                   </h2>
